<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">App02Conversor</string>
    <string name="string_moneda_a">Moneda A</string>
    <string name="string_moneda_b">Moneda B</string>
    <string name="text_europts">Euros a Ptas</string>
    <string name="text_ptseuro">Ptas a Euros</string>
    <string name="boton_txt">Convertir</string>
    <string name="euros">Euros</string>
    <string name="ptas">Pesetas</string>
</resources>