<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.arrow.app02conversor.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_moneda_a"
        android:textSize="24sp"
        android:id="@+id/text_view_moneda_a" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edit_text_moneda_a"
        tools:text="MonedaA"
        android:textSize="24sp"
        android:text="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_moneda_b"
        android:textSize="24sp"
        android:id="@+id/text_view_moneda_b" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edit_text_moneda_b"
        tools:text="MonedaB"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio_group_monedas"
        android:checkedButton="@+id/radio_button_euros_ptas">

        <RadioButton
            android:text="@string/text_europts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_euros_ptas"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/text_ptseuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_ptas_euros"
            android:layout_weight="1" />

    </RadioGroup>

    <Button
        android:text="@string/boton_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_convertir" />


</LinearLayout>
